--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core Libraries
 streamlit==1.38.0
 gradio==4.44.0
-numpy>=1.26.0  # Updated to satisfy opencv-python dependencies
+numpy>=1.26.0
 pandas==1.5.3
 opencv-python==4.10.0.84
 pytesseract==0.3.13
@@ -11,8 +11,7 @@ torch==2.4.1
 torchvision==0.19.1
 torchaudio==2.4.1
 transformers==4.45.1
-scipy==1.10.1
-huggingface-hub==0.25.1
+scipy==1.11.0  # Update this line
 
 # Data Visualization
 altair==5.4.1
@@ -64,4 +63,5 @@ rich==13.8.1
 tornado==6.4.1
 watchdog==4.0.2
 zipp==3.20.2
+
 
