--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ torch==2.4.1
 torchvision==0.19.1
 torchaudio==2.4.1
 transformers==4.45.1
-scipy==1.11.0  # Update this line
+scipy==1.11.0  # Updated this line
 
 # Data Visualization
 altair==5.4.1
@@ -63,5 +63,3 @@ rich==13.8.1
 tornado==6.4.1
 watchdog==4.0.2
 zipp==3.20.2
-
-
