--- a/requirements.txt
+++ b/requirements.txt
@@ -4,36 +4,36 @@ gradio==4.44.0
 numpy==1.24.0
 pandas==1.5.3
 opencv-python==4.10.0.84
-Pillow==10.4.0
+pytesseract==0.3.13
 
-# Machine Learning and OCR Libraries
+# Machine Learning 
 torch==2.4.1
 torchvision==0.19.1
 torchaudio==2.4.1
-transformers==4.45.1  # Hugging Face Transformers library
-scipy==1.9.3           # Useful for scientific computations
+transformers==4.45.1
+scipy==1.9.3  # Updated
 
-# Additional Utilities
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.25.1
-python-multipart==0.0.12
-pydantic==2.9.2
-pydantic_core==2.23.4
-
-# Data Visualization Libraries
+# Data Visualization
 altair==5.4.1
 matplotlib==3.7.5
 pydeck==0.9.1
+
+# OCR and PDF Libraries
+pdfminer.six==20231228
+pdfplumber==0.11.4
+pdf2image==1.17.0
 
 # Web and API Libraries
 fastapi==0.115.0
 httpx==0.27.2
 uvicorn==0.31.0
 
-# OCR and PDF Libraries
-pdfminer.six==20231228
-pdfplumber==0.11.4
-pdf2image==1.17.0
+# Utility Libraries
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.25.1
+python-multipart==0.0.12
+pydantic==2.9.2
+pydantic_core==2.23.4
 
 # Additional Libraries
 attrs==24.2.0
@@ -63,4 +63,5 @@ rich==13.8.1
 tornado==6.4.1
 watchdog==4.0.2
 zipp==3.20.2
+
 
