--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,14 @@ numpy==1.24.0
 pandas==1.5.3
 opencv-python==4.10.0.84
 pytesseract==0.3.13
+Pillow==10.4.0
 
 # Machine Learning 
 torch==2.4.1
 torchvision==0.19.1
 torchaudio==2.4.1
 transformers==4.45.1
-scipy==1.9.3  # Updated
+scipy==1.9.3
 
 # Data Visualization
 altair==5.4.1
@@ -63,5 +64,3 @@ rich==13.8.1
 tornado==6.4.1
 watchdog==4.0.2
 zipp==3.20.2
-
-
